fixed hidden editor scrollbar

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,5 +1,5 @@
-html {
-    scrollbar-color: #313131 #121212 !important;
+:root {
+    color-scheme: dark;
 }
 
 .flipFlashcard-enter, .flipFlashcard-leave-to {
